docs/example/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: cloudflared
spec:
  controller: cloudflared.cloudflare.com/ingress-controller
  parameters:
    apiGroup: cloudflared.cloudflare.com
    kind: TunnelConfiguration
    name: tunnelconfiguration-sample
