docs/example/ingress-with-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudflared-ingress
spec:
  ingressClassName: cloudflared
  rules:
  - http:
      paths:
      - path: /foo
        pathType: Exact
        backend:
          service:
            name: helloweb
            port:
              number: 80
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: helloweb
            port:
              number: 80
