docs/example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudflared-ingress
spec:
  ingressClassName: cloudflared
  defaultBackend:
    service:
      name: my-nginx
      port:
        number: 80
